# MyPlayer

./: README.md
raoxu/first/: my_play  my_player.c
raoxu/reference/: simplest_ffmpeg_audio_player.c  simplest_ffmpeg_video_player.c  编译文件.txt
raoxu/second/: my_play  my_player.c
raoxu/work/: makefile  my_play  my_player.c
raoxu/work2/: CMakeCache.txt  CMakeLists.txt  Makefile  build  cmake_install.cmake  main.c  player
